<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2b95ed"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lbl_titulo"
        android:layout_width="77dp"
        android:layout_height="19dp"
        android:text="@string/TV_Censo"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="210dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_nombre"
        android:textColor="@color/white"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_titulo" />

    <TextView
        android:id="@+id/txt_nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Apell_Nom"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/txt_nombre"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_titulo" />

    <TextView
        android:id="@+id/txt_correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/lbl_correo"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nom" />

    <EditText
        android:id="@+id/txt_corre"
        android:layout_width="210dp"
        android:layout_height="31dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/txt_correo"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre" />

    <TextView
        android:id="@+id/txt_clave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="10dp"
        android:text="@string/lbl_Clave"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/txt_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_correo"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="210dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textSize="8sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_corre"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view"
        android:layout_width="413dp"
        android:layout_height="427dp"
        android:background="#022858"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.596" />

    <TextView
        android:id="@+id/txt_telf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/lbl_telefono"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/txt_contacto"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <EditText
        android:id="@+id/txt_contacto"
        android:layout_width="210dp"
        android:layout_height="38dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/white"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/txt_nac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/lbl_nac"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_telf" />

    <EditText
        android:id="@+id/txt_fecha"
        android:layout_width="210dp"
        android:layout_height="29dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="date"
        android:textColor="@color/white"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.634"
        app:layout_constraintStart_toEndOf="@+id/txt_nac"
        app:layout_constraintTop_toBottomOf="@+id/txt_contacto" />

    <TextView
        android:id="@+id/txt_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:text="@string/lbl_hnac"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nac" />

    <EditText
        android:id="@+id/txt_nac1"
        android:layout_width="210dp"
        android:layout_height="31dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="time"
        android:textColor="@color/white"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.693"
        app:layout_constraintStart_toEndOf="@+id/txt_hora"
        app:layout_constraintTop_toBottomOf="@+id/txt_fecha" />

    <TextView
        android:id="@+id/txt_resid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/lbl_reside"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_hora" />

    <RadioGroup
        android:id="@+id/rgp_zona_resid"
        android:layout_width="176dp"
        android:layout_height="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_resid">

        <RadioButton
            android:id="@+id/rbtn_urba"
            android:layout_width="88dp"
            android:layout_height="33dp"
            android:text="@string/rbtn_Urbano"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/rbtn_Rural"
            android:layout_width="88dp"
            android:layout_height="31dp"
            android:text="@string/rbtn_Rural"
            android:textColor="@color/white"
            android:textSize="10sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/txt_p1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_per_viven"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgp_zona_resid" />

    <EditText
        android:id="@+id/txt_vivi"
        android:layout_width="110dp"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/white"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toEndOf="@+id/txt_p1"
        app:layout_constraintTop_toBottomOf="@+id/rgp_zona_resid" />

    <TextView
        android:id="@+id/txt_p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/lbl_sueldo"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_p1" />

    <EditText
        android:id="@+id/txt_fam"
        android:layout_width="110dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toEndOf="@+id/txt_p2"
        app:layout_constraintTop_toBottomOf="@+id/txt_vivi" />

    <TextView
        android:id="@+id/txt_mascotas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/rbtn_mascotas"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_p2" />

    <CheckBox
        android:id="@+id/cbx_Gato"
        android:layout_width="62dp"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/cbx_Gato"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_mascotas" />

    <CheckBox
        android:id="@+id/cbx_Perro"
        android:layout_width="62dp"
        android:layout_height="30dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="16dp"
        android:text="@string/cbx_Perro"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_mascotas" />

    <CheckBox
        android:id="@+id/cbx_Pollo"
        android:layout_width="62dp"
        android:layout_height="30dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="16dp"
        android:text="@string/cbx_Pollo"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_mascotas" />

    <CheckBox
        android:id="@+id/cbx_Pato"
        android:layout_width="62dp"
        android:layout_height="30dp"
        android:layout_marginStart="236dp"
        android:layout_marginTop="16dp"
        android:text="@string/cbx_pato"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_mascotas" />

    <CheckBox
        android:id="@+id/cbx_Otros"
        android:layout_width="62dp"
        android:layout_height="30dp"
        android:layout_marginStart="308dp"
        android:layout_marginTop="16dp"
        android:text="@string/cbx_otros"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_mascotas" />

    <TextView
        android:id="@+id/id_p4"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/txt_gbo"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <EditText
        android:id="@+id/txt_p4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/txt_multi"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_p4" />

    <Button
        android:id="@+id/btn_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FA3679"
        android:drawableLeft="@drawable/baseline_arrow_forward_24"
        android:text="@string/btn_enviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_p4"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="132dp"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@+id/lbl_titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/descarga__1_" />

</androidx.constraintlayout.widget.ConstraintLayout>